--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,16 @@
     <string name="data_01_06_2025">Data: 01/06/2025</string>
     <string name="editar_partida">Editar Partida</string>
     <string name="atualizar_partida">Atualizar</string>
+    <string name="foto_do_perfil">Foto do Perfil</string>
+    <string name="nome">Nome</string>
+    <string name="email">Email</string>
+    <string name="senha">Senha</string>
+    <string name="cadastrar">Cadastrar</string>
+    <string name="login">Login</string>
+    <string name="email_login">Email</string>
+    <string name="senha_login">Senha</string>
+    <string name="entrar">Entrar</string>
+    <string name="n_o_tem_uma_conta_cadastre_se">Não tem uma conta? Cadastre-se</string>
 
 
 </resources>
