--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="senha_login">Senha</string>
     <string name="entrar">Entrar</string>
     <string name="n_o_tem_uma_conta_cadastre_se">Não tem uma conta? Cadastre-se</string>
+    <string name="criar_nova_conta">Criar Nova Conta</string>
 
 
 </resources>
